# Infosys-Document-Workbench

./: .gitignore  README.md
_internal/scripts/config_file_updater/: config_file_updater.py
_internal/scripts/docs_manager/: docs_manager.py
_internal/scripts/local_cache/: lcm_idw_setup_config.json  local_cache_manager.py  local_cache_util.py
components/java/: JavaManager.ps1  pom.xml  sonar-project.properties
components/java/DocWorkbenchDevReport/: pom.xml
components/java/DocWorkbenchEngine1WAR/: docwbengine1.dev.service  pom.xml  winsw-2.3.0-net4.xml
components/java/DocWorkbenchEngine2WAR/: docwbengine2.dev.service  pom.xml  winsw-2.3.0-net4.xml
components/java/DocWorkbenchEngineCoreJAR/: pom.xml
components/java/DocWorkbenchEngineExtractorJAR/: pom.xml
components/java/DocWorkbenchRulesWAR/: docwbrules.bat  docwbrules.dev.service  pom.xml  winsw-2.3.0-net4.xml
components/java/DocWorkbenchServiceWAR/: pom.xml
components/java/DocWorkbenchUIWAR/: angular.code-workspace  pom.xml
components/java/DocWorkbenchWebApiJAR/: pom.xml
components/middleware/proxyserver/: nginx.dev.conf  nginx.local.conf
components/middleware/tomcat/: tomcat.dev.service
docs/: README.md  docs_manager.bat  pyproject.toml  python.code-workspace
docs/docs/source/: conf.py  index.rst  installation.rst  prerequisites.rst
docs/docs/source/img/: docwb_fs.wsd  docwb_fs_ReadMe.md
tools/LinuxScripts/: certificate-generator.sh
tools/python/batch_extractor/: create_directories.py  database_setup_postgres.py  docwb_batch_extractor.py  docwb_install_apps.py
(+1406 files in other folders)
