[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docwb_docs"
version = "0.0.1"
description = "Infosys Document Workbench"
dependencies = [
    "Sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
    "pipdeptree==2.24.0",
    "sphinx-tabs==3.4.7",
    "sphinx-copybutton==0.5.2",
    "sphinx-inline-tabs==2023.4.21"  
]

